samples/test4.mine.out

   Program: 
  1   VarDecl: 
         Type: int
  1      Identifier: i

*** Error line 2.
    i+2;
    ^
*** syntax error

